# api_salon

./: .gitignore  CHANGELOG.md  README.md  app.py  docker-compose.prod.yml  docker-compose.yml
.github/workflow/: Deploy.yaml
.github/workflows/: ci.yml  deploy.yml  release.yml
api/: dockerfile  main.py  pyproject.toml
api/models/: categories.py  products.py  produpdate.py  users.py
api/routes/: categories.py  products.py  produpdate.py  users.py
api/utils/: database.py  validate_category.py  validate_token.py
db/: dockerfile
demo_stack/: demo_stack.py
